Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-54012

Unable to restart app with background service on Android after closing via task switcher

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.6.2, 5.7.1
    • 5.7.0 RC
    • QPA
    • None
    • Qt 5.7 RC, Android 6.0.1
    • Android

    Description

      Having a service (based on QtService) started or running with foreground status and killing the application UI via task switcher, the application UI cannot be restarted anymore. It gets stuck on the first activity view.

      Exiting the app via back key and relaunching works ok.

      Attached is quite minimal project to reproduce the issue.

      NOTE: The keyword here is "foreground". I.e. calling startForeground method in the service seems to be causing the issue.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            taipan BogDan Vatra
            heikki Heikki Haveri
            Votes:
            2 Vote for this issue
            Watchers:
            9 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes